# trytond-contract

./: .review.cfg  CHANGELOG  README  __init__.py  activity.xml  analytic_contract.xml  configuration.py  configuration.xml  contract.py  contract.xml  invoice.py  invoice.xml  message.xml  party.py  party.xml  pyproject.toml  setup.py  tryton.cfg
doc/es/: areas_funcionales.rst  contract.rst
locale/: ca.po  ca_ES.po  de.po  de_DE.po  es.po  es_ES.po
tests/: __init__.py  scenario_contract.rst  scenario_contract_grouping.rst  scenario_contract_with_analytics.rst  scenario_monthly_full_month_contract.rst  scenario_monthly_full_month_with_invoice_date_contract.rst  scenario_monthly_natural_days_contract.rst  scenario_monthly_start_in_month_contract.rst  scenario_party_erase.rst  scenario_party_replace.rst  test_contract.py  test_module.py
tests/features/: contract.feature  environment.py
tests/features/steps/: steps.py
view/: analytic_contract_line_form.xml  analytic_contract_line_list.xml  configuration_form.xml  contract_consumption_form.xml  contract_consumption_list.xml  contract_form.xml  contract_line_form.xml  contract_line_list.xml  contract_line_list_sequence.xml  contract_line_service_form.xml  contract_line_service_list.xml  contract_list.xml  contract_review_form.xml  contract_review_line_form.xml  contract_review_line_list.xml  contract_review_list.xml  contract_service_form.xml  contract_service_list.xml  create_consumptions_start_form.xml  create_invoices_start_form.xml  create_reviews_start_form.xml  credit_start_form.xml  party_form.xml
